Fixed placeholder pseudostyling on firefox to no opacity on ticket pages
git-svn-id: https://teamsupport.svn.beanstalkapp.com/main/trunk@3876 02885c34-e171-44ab-8435-42fb7a3c3aaf

--- a/WebApp/Resources/Pages/NewTicketV2.css
+++ b/WebApp/Resources/Pages/NewTicketV2.css
@@ -590,18 +590,21 @@
     #ticket-tag-Input::-webkit-input-placeholder
      {
      color: #428bca;
+     opacity: 1;
     }
 
     #ticket-properties-area .selectize-input input:-moz-placeholder,
      #ticket-tag-Input:-moz-placeholder
     { /* Firefox 18- */
          color: #428bca; 
+         opacity: 1;
     }
 
     #ticket-properties-area .selectize-input input::-moz-placeholder,
     #ticket-tag-Input::-moz-placeholder
     {  /* Firefox 19+ */
          color: #428bca; 
+         opacity: 1;
     }
 
     .muted-placeholder::-webkit-input-placeholder,
