--- a/WebApp/Resources/Pages/TicketV2.css
+++ b/WebApp/Resources/Pages/TicketV2.css
@@ -618,6 +618,7 @@
     #ticket-tag-Input::-webkit-input-placeholder
      {
      color: #428bca;
+     opacity: 1;
      /*text-decoration: underline;*/
     }
 
@@ -625,12 +626,14 @@
      #ticket-tag-Input:-moz-placeholder
     { /* Firefox 18- */
          color: #428bca; 
+         opacity: 1;
     }
 
     #ticket-properties-area .selectize-input input::-moz-placeholder,
     #ticket-tag-Input::-moz-placeholder
     {  /* Firefox 19+ */
          color: #428bca; 
+         opacity: 1;
     }
 
     #ticket-properties-area .selectize-input > input {
